# nym

./: Cargo.toml
clients/tauri-client/src-tauri/src/: main.rs
common/credentials/src/coconut/: utils.rs
common/nymcash/: Cargo.toml
common/nymcash/benches/: final_benchmark.rs  final_plots.py
common/nymcash/src/: lib.rs
common/nymcoconut/benches/: benchmarks.rs
common/nymcoconut/src/: lib.rs  utils.rs
common/nymcoconut/src/proofs/: mod.rs
common/nymcoconut/src/scheme/: issuance.rs  keygen.rs  mod.rs  setup.rs  verification.rs  verification_request.rs  verification_spend.rs
common/nymcoconut/src/tests/: e2e.rs
