[package]
name = "nymcash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nymcoconut = { path = "../nymcoconut" }
bls12_381 = { version = "0.5", default-features = false, features = ["pairings", "alloc", "experimental"] }
itertools = "0.10"
group = { version = "0.10", default-features = false}

[dev-dependencies]
criterion = { version="0.3", features=["html_reports"] }
doc-comment = "0.3"

[[bench]]
name = "final_benchmark"
harness = false
